create view for levels and branches and modules

--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -52,7 +52,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="#">منشورات </a>
                                 <a class="dropdown-item" href="{% url 'typesactivities'%}">النشاطات</a>
-                                <a class="dropdown-item" href="#">فيديوهات </a>
+                                <a class="dropdown-item" href="{% url 'levels'%}">فيديوهات </a>
                                 <a class="dropdown-item" href="#">موارد</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">الطاقم</a>
