--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -100,7 +100,7 @@
         <h1 class="text-center">
             السلام عليكم ورحمة الله و بركاته
             </h1>
-            <div class="container">
+            <div class="container pt-2">
                 <div class="row mt-4">
                     <div class="col-md-8">
                         {% block content%}
