--- a/src/videos/templates/videos/modules.html
+++ b/src/videos/templates/videos/modules.html
@@ -1,14 +1,14 @@
 {% extends 'blog/base.html'%}
 {% block content%}
-<legend class="border-bottom text-light p-2 mb-3 bg-dark text-right">الفيديوهات   <i class="fas fa-film" style="color:red"></i></legend>
-<div class="border  p-2  mb-3 " > 
-    <div class="card-columns  p-1 text-center">
-     
+<legend class="border-bottom text-light p-2 mb-2 bg-dark text-right">الفيديوهات   <i class="fas fa-film" style="color:red"></i></legend>
+<div class="border  p-1  mb-3 bg-secondary" > 
+  <div class="container pt-2">
+    <div class="row">
 {% for module in modules %}
-
-    <div class="card " >
-        <div class="card-body">
-          <h5 class="card-title"><a class="text-danger h5" href="#">{{module.module}}</a></h5>           
+<div class="col-lg-4  p-1">
+    <div class="card h-100 text-center" >
+        <div class="card-body ">
+          <h5 class="card-title"><a class="text-danger h5" href="{% url 'videos' module.id %}">{{module.module}}</a></h5>           
           <ul class="text-right">
             <li class="card-text text-danger ">المعامل:<small class="text-info">  {{module.coefficient}} </small></li>
             <li class="card-text text-danger ">حساب المعدل:<small class="text-info"> {{module.average_expression}} </small></li>
@@ -17,12 +17,14 @@
           </ul>  
           </div>
         <div class="card-footer">
-            <a href="#" class="btn btn-dark">معاينة الفيديوهات</a>
+            <a href="{% url 'videos' module.id %}" class="btn btn-danger">معاينة الفيديوهات <i class="fab fa-youtube "  ></i></a>
           </div>
       </div>
+    </div>
 {%empty%}
     <p class="h3 p-3">لا يوجد مواد</p>
 {% endfor %}
 </div>
+</div> 
 </div>
 {% endblock content%}
