--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -66,8 +66,9 @@
                         </li>
                         
                 </ul>
-                {% if user.is_authenticated %}
                 <ul  class="navbar-nav mr-auto">
+                {% if user|has_group:'member' %}
+                
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         عمليات <svg class="bi bi-command" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -77,21 +78,24 @@
                     <div class="dropdown-menu  bg-light" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item bg-primary  text-light" href="{% url 'add_act'%}"> إضافة نشاط <i class="fas fa-puzzle-piece"></i></a>
                             <a class="dropdown-item bg-info text-light" href="{% url 'add_post' %}">نشر تدوينة <i class="fas fa-blog"></i> </a>
-                            <a class="dropdown-item bg-dark text-light" href="#">إضافة فيديو <i class="fas fa-film" style="color:red"></i></a>
+                            <a class="dropdown-item bg-dark text-light" href="{% url 'add_videos' %}">إضافة فيديو <i class="fas fa-film" style="color:red"></i></a>
                             <a class="dropdown-item bg-secondary text-light" href="#">إضافة موارد  <i class="fas fa-parachute-box" style="color:greenyellow"></i></a>
                             <div class="dropdown-divider bg-warning"></div>
                             <a class="dropdown-item bg-success text-light" href="#">الطاقم <i class="far fa-compass" ></i></a>
                     </div>
                     </li>
+                {% endif %}
+                {% if user.is_authenticated %}
                     <li class="nav-item"> <a class="nav-link" href="{% url 'profile' %}"> الملف الشخصي <i class="fas fa-address-card  text-dark"></i></a></li>
                     <li class="nav-item te"><a class="nav-link" href="{% url 'logout'%}">  الخروج <i class="fas fa-sign-out-alt  text-dark"></i></a></li>
-                </ul>
+               
                 {% else %}
-                <ul  class="navbar-nav mr-auto">
+                 
                     <li class="nav-item"> <a class="nav-link" href="{% url 'login'%}"> الدخول <i class="fas fa-sign-in-alt  text-dark"></i></a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'signup'%}">   تسجيل <i class="fas fa-user-plus  text-dark"></i> </a></li>
-                </ul>
+                 
                 {% endif %}
+            </ul>
                 </div>
             </nav>
             <!-- End Navbar -->
